# lms

./: .gitignore  LICENSE  README.md  main.py  schoology.py  setup.cfg  setup.py
lms/: __main__.py
lms/schoology/: __init__.py  api.py  backend.py  enums.py  main.py  objects.py  util.py
