[metadata]
name = lms
version = 0.1
author = Devin J. Pohly
author_email = djpohly@gmail.com
description = Command-line interface to learning management systems
url = https://github.com/djpohly/lms
long_description = file: README.md

[options]
packages = find:
install_requires =
  click-repl
  click-log
  schoolopy
  xdg
  cached-property

[options.entry_points]
console_scripts =
  lms = lms.__main__:cli
